# streamlit-app-base

./: .env.template  .gitignore  CONTRIBUTING.md  README.md  Taskfile.yml  template_info.json
.datarobot/cli/: base.yml  versions.yaml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: notify-slack.yml  reminder.yml  remove-label-when-approved.yml
infra/: Pulumi.yaml  Taskfile.yaml  __main__.py  pyproject.toml
infra/infra/: __init__.py  streamlit_app.py
src/: config.py  constants.py  metadata.yaml  metadata.yaml.sample  pyproject.toml  requirements.txt  start-app.sh  streamlit_app.py  utils.py
src/.streamlit/: config.toml
