[project]
name = "streamlit-app-base-infra"
version = "0.0.1"
description = "Streamlit App Base - DataRobot deployment infrastructure"
requires-python = ">=3.11, <3.14"

dependencies = [
    "datarobot>=3.5.2",
    "datarobot-pulumi-utils>=0.1.0",
    "pulumi>=3.175.0",
    "pulumi-datarobot>=0.10.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.3.0",
]
